# boxcraft

./: Cargo.toml  README.md  build.rs
src/: input.rs  main.rs  physics.rs  plugin.rs
src/app/input/: mod.rs  plugin.rs  plugins.rs
src/app/input/systems/: clear.rs
src/boxworld/: block.rs  chunk.rs  mod.rs  plugin.rs  voronoi.rs  worker.rs
src/boxworld/systems/: calculate.rs  mod.rs  sync_camera.rs  worker.rs
src/debug_ui/: CappedDequeueVec.rs  inspect.rs  mod.rs  renderer.rs
src/game/: block.rs  camera.rs  config.rs  debug_ui.rs  mod.rs  physics.rs  player.rs  schedule.rs  systems.rs  transform.rs
src/game/common/: transform.rs
src/game/player/: mod.rs
src/game/world/: block.rs  chunk.rs  generator.rs  mod.rs  voronoi.rs
src/misc/: input.rs  mod.rs  physics.rs  window.rs
src/physic/: mod.rs  plugin.rs
src/renderer/: block.rs  box_instance.rs  camera.rs  context.rs  debug_ui_renderer.rs  error.rs  game.rs  game_renderer.rs  mod.rs  plugins.rs  renderer.rs  texture.rs  transform.rs  util.rs  vertex.rs
src/renderer/shaders/: fragment.frag  fragment.glsl  vertex.glsl  vertex.vert
src/renderer/systems/: wireframe.rs
src/ui/: mod.rs  plugin.rs  renderer.rs
src/ui/systems/: draw_ui.rs  mod.rs  pre_update.rs
src/utils/: time.rs
src/worker/: mod.rs  plugins.rs
