[package]
name = "boxcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
image = "0.24.1"
wgpu = { version = "0.13.1", features = ["spirv"] }
winit = "0.26.1"
nalgebra = "0.31.0"
rapier3d = "0.15.0"
imgui = "0.8.2"
imgui-winit-support = { version = "0.8.2", default-features = false, features = ["winit-26"] }
imgui-wgpu = "0.20.0"
log = "0.4"
env_logger = "0.9"
pollster = "0.2.5"
legion = "0.4.0"
atomic_refcell = "0.1.8"
parking_lot = "0.12.1"

[build-dependencies]
shaderc = "0.8.0"
glob = "0.3.0"
