[package]
name = "boxcraft"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.0.2"
image = "0.24.5"
wgpu = { version = "0.15.1", features = ["spirv"] }
winit = "0.28.3"
nalgebra = "0.32.1"
rapier3d = "0.17.1"
egui = "0.21.0"
egui_wgpu_backend = "0.22.0"
egui_winit_platform = "0.18.0"
log = "0.4"
env_logger = { version = "0.11.0", features = ["humantime", "regex"], default-features = false }
futures-lite = "2.2.0"
bevy_ecs = "0.12.1"
bevy_tasks = { version = "0.12.1", features = ["multi-threaded"] }
atomic_refcell = "0.1.9"
parking_lot = "0.12.1"
rand = "0.8.5"

# World generation
voronator = "0.2.1"

[build-dependencies]
shaderc = "0.8.0"
glob = "0.3.0"
